Stop overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html, body, #root {
   text-align: center;
   overscroll-behavior: none;
   -webkit-tap-highlight-color: transparent;
+  overflow: hidden;
 }
 
 #root {
